baculum: Fix displaying empty column button in table column visibility menu - reported by Wanderlei Huttel

--- a/gui/baculum/themes/Baculum-v2/css/baculum.css
+++ b/gui/baculum/themes/Baculum-v2/css/baculum.css
@@ -63,6 +63,11 @@ table.dataTable.no-footer {
 	background-image: linear-gradient(to bottom, white 0%, #e9e9e9 100%);
 }
 
+/* Hide first default column in column visibility menu */
+div.dt-button-collection button[data-cv-idx="0"] {
+	display: none;
+}
+
 div.table_toolbar {
 	display: inline-block;
 	margin-left: 10px;
